# yiirs

./: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  config.toml.example  config.yaml.example  demo_rs.sql
api/: Cargo.toml
api/src/: lib.rs  router.rs
api/src/auth/: identity.rs  mod.rs
api/src/controller/: account.rs  auth.rs  project.rs
api/src/middleware/: auth.rs  cors.rs  identity.rs  log.rs  req_id.rs
api/src/result/: rejection.rs
api/src/router/: app.rs
api/src/service/: account.rs  auth.rs  identity.rs  project.rs
app/: Cargo.toml
app/src/: lib.rs
app/src/api/: mod.rs
app/src/api/controller/: account.rs  auth.rs  project.rs
app/src/api/middleware/: auth.rs
app/src/api/router/: app.rs
app/src/api/service/: account.rs  auth.rs  project.rs
app/src/cmd/: mod.rs
app/src/ent/: account.rs  project.rs
cmd/: Cargo.toml
cmd/src/: hello.rs  lib.rs  serve.rs
crypto/: Cargo.toml
crypto/src/: aes.rs  hash.rs
ent/: Cargo.toml
ent/src/: lib.rs  prelude.rs
entity/: Cargo.toml
pkg/: Cargo.toml
pkg/src/: cache.rs  config.rs  identity.rs  lib.rs  mutex.rs  time.rs  util.rs  xtime.rs
pkg/src/crypto/: aes.rs
pkg/src/middleware/: cors.rs  identity.rs  log.rs  req_id.rs
pkg/src/result/: response.rs
result/: Cargo.toml
result/src/: status.rs
service/: Cargo.toml
service/src/: account.rs  auth.rs  lib.rs  project.rs
setting/: Cargo.toml
setting/src/: redis.rs
src/: main.rs
src/app/: mod.rs
src/app/api/: account.rs  auth.rs  project.rs
src/app/cmd/: hello.rs
src/app/middleware/: auth.rs  mod.rs
src/app/model/: account.rs  prelude.rs  project.rs
src/app/router/: mod.rs  route.rs
src/app/service/: account.rs  auth.rs  project.rs
src/axum/: mod.rs
src/cmd/: app.rs  mod.rs  project.rs  server.rs
src/config/: db.rs  logger.rs  mod.rs  redis.rs
src/crypto/: aes.rs  hash.rs
src/db/: mod.rs
src/db/entity/: mod.rs
src/entity/: account.rs  prelude.rs  project.rs
src/internal/: axum.rs  mod.rs  salvo.rs
src/internal/core/: db.rs
src/internal/crypto/: aes.rs
src/internal/middleware/: catch_panic.rs  log.rs  mod.rs  trace.rs
src/internal/result/: code.rs  mod.rs  reply.rs
src/internal/util/: identity.rs  mod.rs  mutex.rs  xtime.rs
src/middleware/: auth.rs  cors.rs  identity.rs  log.rs  req_id.rs
src/middlewares/: auth.rs  log.rs  mod.rs  req_id.rs
src/redis/: mod.rs
src/result/: mod.rs  rejection.rs  response.rs
src/router/: app.rs
src/salvo/: mod.rs
src/service/: account.rs  auth.rs  mod.rs  project.rs
src/shared/core/: cache.rs  db.rs  logger.rs  mod.rs
src/shared/crypto/: aes.rs  hash.rs
src/shared/middleware/: catch_panic.rs  cors.rs  identity.rs  log.rs  mod.rs  trace.rs  trace_id.rs
src/shared/result/: code.rs  mod.rs  rejection.rs  reply.rs  response.rs  status.rs
src/shared/util/: helper.rs  identity.rs  mutex.rs  xtime.rs
src/util/: aes.rs  auth.rs  crypto.rs  hash.rs  helper.rs  mod.rs  time.rs
template/: Dockerfile  Dockerfile.tera  config.toml  dockerignore.tera  dockerun.sh  dockerun.tera  gitignore  gitignore.tera
template/axum/: Cargo.tera  Cargo.toml  README.md  README.tera  main.tera
template/axum/app/: main.tera  mod.tera
template/axum/app/api/: greeter.tera
template/axum/app/cmd/: hello.tera  mod.tera  serve.tera
template/axum/app/middleware/: auth.tera
template/axum/app/router/: route.tera
template/axum/app/service/: greeter.tera
template/axum/internal/core/: cache.tera  db.tera  logger.tera
template/axum/internal/crypto/: aes.tera
template/axum/internal/middleware/: catch_panic.tera  log.tera  trace.tera
template/axum/internal/result/: code.tera
template/axum/internal/util/: helper.tera  identity.tera  mutex.tera  xtime.tera
template/salvo/: Cargo.tera  Cargo.toml  README.tera  main.tera
template/salvo/app/: mod.tera
template/salvo/app/api/: greeter.tera
template/salvo/app/cmd/: mod.tera  serve.tera
template/salvo/app/middleware/: auth.tera
template/salvo/app/router/: mod.tera  route.tera
template/salvo/internal/core/: manager.tera  mod.tera
template/salvo/internal/crypto/: hash.tera  mod.tera
template/salvo/internal/middleware/: catch_panic.tera  log.tera  trace.tera
template/salvo/internal/result/: code.tera
template/salvo/internal/util/: xtime.tera
util/: Cargo.toml
util/src/: time.rs
