[package]
name = "yiirs"
version = "1.4.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "yiirs"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
tera = "1"
serde = { version = "1.0", features = ["derive"] }
