[package]
name = "yiirs"
version = "1.0.0"
authors = ["ShengHui <847713844@qq.com>"]
edition = "2021"
description = "Rust API development scaffolding, support salvo and axum."
license = "Apache-2.0"
repository = "https://github.com/shenghui0779/yiirs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "yiirs"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
tera = "1"
serde = { version = "1.0", features = ["derive"] }
