[package]
name = "pkg"
version = "1.2.3"
edition = "2021"
description = "Package"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
thiserror = "1.0"
anyhow = "1.0"
rand = "0.8"
const-hex = "1.10"
openssl = { version = "0.10", features = ["vendored"] }
digest = "0.10"
md-5 = "0.10"
sha1 = "0.10"
sha2 = "0.10"
hmac = "0.12"
base64 = "0.21"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
config = "0.13"
chrono = "0.4"
time = { version = "0.3", features = [
    "macros",
    "local-offset",
    "formatting",
    "parsing",
] }
mobc = "0.8"
r2d2 = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json"] }
tracing-appender = "0.2"
hyper = "1.0"
http = "1.0"
http-body = "1.0"
http-body-util = "0.1"
tower-http = { version = "0.5", features = ["trace"] }
axum = { version = "0.7", features = ["macros"] }
axum-extra = "0.9"
nanoid = "0.4"
validator = { version = "0.16", features = ["derive"] }
sea-orm = { version = "0.12", features = [
    "sqlx-mysql",
    "runtime-tokio-rustls",
    "macros",
    "debug-print",
] }
redis = { version = "0.25", features = [
    "r2d2",
    "cluster",
    "cluster-async",
    "tokio-comp",
] }
