[package]
name = "util"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8"
chrono = "0.4"
validator = { version = "0.16", features = ["derive"] }
redis = { version = "0.23", features = [
    "cluster",
    "cluster-async",
    "tokio-comp",
] }
